Update azure-pipelines.yml to use 'drop' as the ArtifactName

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,6 +37,6 @@ steps:
   displayName: 'Publish Artifact'
   inputs:
     PathtoPublish: '$(build.sourcesdirectory)\Artifacts'
-    ArtifactName: '$(Parameters.ArtifactName)'
+    ArtifactName: 'drop'
 
 
