--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -46,6 +46,19 @@ stages:
 
 - stage: Deploy
   jobs:
+  - job: DummyJob
+    pool:
+      name: Azure Pipelines
+      demands:
+      - msbuild
+      - visualstudio
+      vmImage: 'windows-2019'
+
+    steps:
+    - task: CmdLine@2
+      inputs:
+        script: 'echo Dummy Deployment'
+        
   - job: DeploymentJob
     dependsOn: Build
 
