Update azure-pipelines.yml to fix dependency on BuildJob

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -58,9 +58,9 @@ stages:
     - task: CmdLine@2
       inputs:
         script: 'echo Dummy Deployment'
-        
+
   - job: DeploymentJob
-    dependsOn: Build
+    dependsOn: BuildJob
 
     pool:
       name: Azure Pipelines
