Update azure-pipelines.yml for improved build and deployment process

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,11 +73,11 @@ stages:
         buildType: 'current'
         downloadType: 'single'
         artifactName: 'drop'
-        downloadPath: '$(System.ArtifactsDirectory)'
+        downloadPath: '$(System.DefaultWorkingDirectory)'
     
-    - task: AzureWebApp@1
+    - task: AzureRmWebAppDeployment@4
       inputs:
+        ConnectionType: 'AzureRM'
         azureSubscription: 'demogen-test'
-        appName: 'dgnew'
-        appType: 'webApp' 
-        package: '$(System.ArtifactsDirectory)\drop\**\*.zip'
+        appType: webApp
+        WebAppName: 'dgnew'
