--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,7 +47,7 @@ stages:
 
 - stage: Test
   dependsOn: Build
-  condition: and(succeeded(), eq(variables['Build.Reason'], 'IndividualCI'))
+  condition: and(succeeded(), or(eq(variables['Build.Reason'], 'IndividualCI'), eq(variables['Build.Reason'], 'Manual'))))
   displayName: Test Deployment
   jobs: 
   - deployment: DeployWeb
